--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: "Open Sans", sans-serif;
-    background-color: #493c60;
+    background-image: url('../../assets/img/Blue_Nebula_08-1024x1024.png');
     color: #fff;
 }
 
@@ -13,6 +13,11 @@ body a {
 .header {
     background: #45598b;
     color: #fff;
+}
+
+.blog-title {
+    color: white;
+    text-decoration: none;
 }
 
 /* Flex container */
@@ -125,6 +130,90 @@ body a {
 
 .body-container {
   max-width: 800px;
+  margin: 1rem auto;
+  padding: 1rem;
+  background-color: #493c60;
+}
+
+.item-container {
+  max-width: 90%;
   margin: 0 auto;
-  padding: 0 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5rem;
+  padding: 1rem 0;
+  background-color: #37516a;
+}
+
+.individual-container {
+  background: #6b607a;
+  width: 250px;
+  aspect-ratio: 3 / 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.individual-container a {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+  padding: 1rem;
+  color: inherit;
+  text-decoration: none;
+}
+
+.post-date {
+  font-size: 0.8rem;
+  margin-bottom: 0.5rem;
+}
+
+.post-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.post-excerpt {
+  font-size: 1rem;
+  flex-grow: 1;
+}
+
+.individual-container.see-all {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.individual-container.see-all a {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.list-individual-item > a {
+    display: flex;
+    text-decoration: none;
+}
+
+img.game-img {
+    max-width: 250px;
+}
+
+.game-text {
+    padding: 0 1.5rem;
+}
+
+.game-title, .post-title {
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+a.list-individual-link {
+    color: white;
+}
+a.list-individual-link.post {
+    display: block;
 }
