--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -9,6 +9,11 @@ body a {
     color: #afb6d1;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 /* Header container */
 .header {
     background: #45598b;
