--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -222,3 +222,7 @@ a.list-individual-link {
 a.list-individual-link.post {
     display: block;
 }
+
+.list-individual-item {
+    margin: 1rem 0;
+}
